<resources>
    <string name="app_name">Navigation_SMD_7A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="enter_title">Enter Title</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="enter_status">Enter Status</string>
    <string name="status">Status</string>
    <string name="new_product">New Product</string>
</resources>